src/css/WordlistList.scss
@import "App.scss";

.wordlist-list {
    text-align: center;
    margin: -15px;
}

.wordlist-list-label {
    font-size: 24px;
}

.wordlist-name {
    font-size: 48px;
    font-weight: bold;
    color: $white;

    @media (max-width: $mobile-width) {
        font-size: 36px;
    }
}

.wordlist-buttons {
    margin-top: 10px;
}

.change-wordlist-button {
    margin-left: 16px;
}

